--- a/src/scss/_color-pure.scss
+++ b/src/scss/_color-pure.scss
@@ -21,6 +21,16 @@ $secondaryBase400Color: $secondaryColor;
   $secondaryBase400Color: #a8a8a8;
 }
 
+@function getParagraphColor($selector, $fallback) {
+  @if map-has-key($paragraph-styles, $selector) {
+    $styles: map-get($paragraph-styles, $selector);
+    @if map-has-key($styles, "color") {
+      @return map-get($styles, "color");
+    }
+  }
+  @return $fallback;
+}
+
 $colors: (
         '000': mix(#000000, #FFFFFF, 0%),
         '001': mix(#000000, #FFFFFF, 3%),
